
  - The generic function for handling CLOS streams (STREAM-READ-CHAR,
    STREAM-CLEAR-INPUT, etc), are now in the EXT package.

  - HASH-TABLE-REHASH-THRESHOLD can now be any number in (REAL 0 1). Integers
    above 1 are not allowed, and the threshold is always interpreted as the
    relative filling of the hash table before growth (Before, the threshold
    could be an integer number with a somewhat obscure interpretation).

  - SXHASH now always returns positive fixnums and produces the same key for
    two bitvectors which are EQUAL.

  - Implemented the class redefinition protocol, which involves
    CHANGE-CLASS, UPDATE-INSTANCE-FOR-{REDEFINED,NEW}-CLASS, and
    MAKE-INSTANCES-OBSOLETE.

  - There is support for the :CASE argument in all pathname functions
    that require it (Contributed by Julian Stecklina). The function
    PARSE-NAMESTRING now handles the optional host and
    default-pathname arguments properly. MAKE-PATHNAME now signals
    conditions of type FILE-ERROR when the components of the pathname
    have errors (wrong types, '(:ABSOLUTE :BACK), etc).

TODO:
=====

* Selectively remove spices from read.d and object.h

* Implement memory collection based on mmap()

* Improve the garbage collector using kernel information about dirty
  pages.

* Improve fixnum_times.

* #'unread-char does not fail when the character differs from the
  original one.

* vector-push-extend may succeed even if the vector is not
  adjustable. Should we be more strict?

* should we relax ASSOC? (See lists156.tst)

* boost setf and generalized places -- the current implementation is
  extremely faulty with respect to the standards.

* expand parse_namestring() to accept scaped strings, spaces, etc.

* Remove most property lists from standard symbols.

* Make the version with Boehm's GC and the version without it binary
  compatible.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:70 ***
;;; End: ***