@@ -940,7 +940,7 @@ cl_symbols[] = {
 {"CHANGE-CLASS", CL_ORDINARY, NULL, -1, OBJNULL},
 {"CLASS", CL_ORDINARY, NULL, -1, OBJNULL},
 {"CLASS-NAME", CL_ORDINARY, NULL, -1, OBJNULL},
-{"CLASS-OF", CL_ORDINARY, NULL, -1, OBJNULL},
+{"CLASS-OF", CL_ORDINARY, cl_class_of, 1, OBJNULL},
 {"COMPUTE-APPLICABLE-METHODS", CL_ORDINARY, NULL, -1, OBJNULL},
 {"DEFCLASS", CL_ORDINARY, NULL, -1, OBJNULL},
 {"DEFGENERIC", CL_ORDINARY, NULL, -1, OBJNULL},
