@@ -10,8 +10,8 @@
   "src:clos;defclass.lsp"
   "src:clos;standard.lsp"
   "src:clos;print.lsp"
-  "src:clos;change.lsp"
   "src:clos;builtin.lsp"
+  "src:clos;change.lsp"
   "src:clos;stdmethod.lsp"
   "src:clos;generic.lsp"
   "src:clos;fixup.lsp"
