@@ -1804,6 +1804,12 @@ ECL 0.9d
     conditions of type FILE-ERROR when the components of the pathname
     have errors (wrong types, '(:ABSOLUTE :BACK), etc).
 
+  - When creating methods, the parameter specializer names are
+    converted into canonical parameter specializers (i.e. either
+    classes or EQL specializers). Thus, if a method specializes on
+    class A and this class is renamed as B, the method still
+    specializes on the same class.
+
 TODO:
 =====
 
